Fix LBC amount position on file page on mobile

--- a/ui/scss/component/section.scss
+++ b/ui/scss/component/section.scss
@@ -202,6 +202,11 @@
 
   @media (max-width: $breakpoint-small) {
     width: 100%;
+    display: unset;
+    text-align: right;
+    .button--link {
+      margin-bottom: 0;
+    }
     .wunderbar--inline {
       width: 100%;
       flex: unset;
